switch to vim-plug

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,69 @@
 Projects
+src
+.babushka
+.berkshelf
+.boto
+.bundle
+.cache
+.cargo
+.chef
+.cmake
+.cocoapods
+.config
+.cups
+.dev
+.devconfig
+.docker
+.dropbox
+.fzf.bash
+.gem
+.CFUserTextEncoding
+.DS_Store
+.Trash/
+.aws/
+.bash_history
+.bash_sessions/
+.fzf.zsh
+.fzf/
+.gsutil/
+.helm/
+.kube/
+.lesshst
+.local/
+.minikube/
+.multirust
+.mysql_history
+.netrc
+.node-gyp/
+.node_repl_history
+.npm/
+.nvm/
+.oracle_jre_usage/
+.pry_history
+.pryrc
+.psql_history
+.pyenv/
+.rustup/
+.ssh/
+.subversion/
+.vim/
+.viminfo
+.vscode/
+.wget-hsts
+.yarnrc
+Applications/
+Desktop/
+Documents/
+Downloads/
+Dropbox/
+Library/
+Movies/
+Music/
+OneDrive/
+Pictures/
+Public/
+banking-requirements
+box-throne
+bugsnag-ruby/
+mon
+old-dotfiles/
