--- a/.gitconfig
+++ b/.gitconfig
@@ -13,10 +13,10 @@
 
 [core]
 	excludesfile = /Users/richardmcgain/.gitignore-global
-	editor = vim
+	editor = nvim
 
 [user]
-	email = richard.mcgain@shopify.com
+	email = mcgain@gmail.com
   name = "Richard McGain"
 
 [color]
@@ -48,3 +48,10 @@
 	algorithm = patience
 [protocol]
 	version = 2
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[init]
+	defaultBranch = main
