--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,21 @@
   resolveConflict = false
   detachedHead = false
 
+[core]
+    pager = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    navigate = true
+
+[merge]
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
+
 [hub]
   protocol = ssh
 
